--- a/app/templates/adminPart/adminBase.html
+++ b/app/templates/adminPart/adminBase.html
@@ -11,12 +11,10 @@
             margin: 0;
             font-family: Arial, sans-serif;
             display: flex;
-            height: 100vh;
         }
 
         .sidebar {
-            width: 250px;
-            background-color: #2c3e50;
+            height: 100%;
             color: white;
             display: flex;
             flex-direction: column;
@@ -55,12 +53,12 @@
 
         .tab-link:hover,
         .tab-link.active {
-            background-color: #34495e;
+            background-color: #94d3f7;
         }
 
         .logout-btn {
             padding: 15px;
-            background-color: #c0392b;
+            background-color: #f56a61;
             text-align: center;
             text-decoration: none;
             color: white;
