--- a/app/templates/adminPart/adminBase.html
+++ b/app/templates/adminPart/adminBase.html
@@ -12,6 +12,7 @@
             font-family: Arial, sans-serif;
             display: flex;
             height: 100%;
+            color: black;
         }
 
         .sidebar {
