--- a/app/templates/adminPart/adminBase.html
+++ b/app/templates/adminPart/adminBase.html
@@ -23,6 +23,11 @@
             padding: 10px 20px;
             border-bottom: 1px solid #e0e0e0;
             background-color: white;
+            width: 100%;
+            box-sizing: border-box;
+            position: sticky;
+            top: 0;
+            z-index: 100;
         }
 
         .user-info {
@@ -34,6 +39,7 @@
             display: flex;
             flex: 1;
             overflow: hidden;
+            width: 100%;
         }
 
         .sidebar {
@@ -179,13 +185,12 @@
                     <i class="fas fa-user"></i>
                     <span>Profile</span>
                 </a>
-
                 
+                <a href="{{ url_for('admin_logout') }}" class="logout-btn">
+                    <i class="fas fa-sign-out-alt"></i>
+                    <span class="logout-text">Logout</span>
+                </a>
             </div>
-            <a href="{{ url_for('admin_logout') }}" class="logout-btn">
-                <i class="fas fa-sign-out-alt"></i>
-                <span class="logout-text">Logout</span>
-            </a>
         </nav>
 
         <main class="main-content">
