--- a/app/templates/adminPart/adminBase.html
+++ b/app/templates/adminPart/adminBase.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/admin/adminHome.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <style>
+    <!--<style>
         body {
             margin: 0;
             font-family: Arial, sans-serif;
@@ -31,8 +31,8 @@
         }
 
         .user-info {
-            font-size: 14px;
-            text-align: right;
+            font-size: 16px;
+            text-align: left;
         }
 
         .content-container {
@@ -134,7 +134,7 @@
                 margin-left: 70px;
             }
         }
-    </style>
+    </style> -->
 </head>
 <body>
     <header class="header">
@@ -185,10 +185,10 @@
                     <i class="fas fa-user"></i>
                     <span>Profile</span>
                 </a>
-                
+
                 <a href="{{ url_for('admin_logout') }}" class="logout-btn">
                     <i class="fas fa-sign-out-alt"></i>
-                    <span class="logout-text">Logout</span>
+                    <span>Logout</span>
                 </a>
             </div>
         </nav>
