--- a/app/templates/adminPart/adminBase.html
+++ b/app/templates/adminPart/adminBase.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/admin/adminHome.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <!--<style>
+    <style>
         body {
             margin: 0;
             font-family: Arial, sans-serif;
@@ -134,7 +134,7 @@
                 margin-left: 70px;
             }
         }
-    </style> -->
+    </style>
 </head>
 <body>
     <header class="header">
