--- a/app/static/css/admin/adminHome.css
+++ b/app/static/css/admin/adminHome.css
@@ -311,12 +311,9 @@ h2 {
     margin-bottom: 20px;
 }
 
-.form-frame {
-    width: 100%;
-}
 
 .input-frame {
-    padding: 15px;
+    /*padding: 15px;*/
     margin-bottom: 20px;
     border: 1px solid #ddd;
     border-radius: 8px;
