--- a/app/static/css/admin/adminHome.css
+++ b/app/static/css/admin/adminHome.css
@@ -77,6 +77,7 @@ body {
     display: flex;
     align-items: center;
     white-space: nowrap;
+    border-bottom: 1px solid #3498db;
 }
 
 .tab-link i {
@@ -91,7 +92,7 @@ body {
     background-color: white;
     color: #3498db;
     font-weight: bold;
-    border-bottom: 1px solid white;
+    border-bottom: 2px solid #3498db;
     margin-bottom: -1px;
 }
 
