--- a/app/templates/adminPart/adminBase.html
+++ b/app/templates/adminPart/adminBase.html
@@ -24,25 +24,29 @@
                     <i class="fas fa-home"></i>
                     <span>Home</span>
                 </a>
-                <a href="{{ url_for('admin_upload') }}" class="tab-link {% if active_tab == 'admin_uploadtab' %}active{% endif %}">
+                <!--<a href="{{ url_for('admin_upload') }}" class="tab-link {% if active_tab == 'admin_uploadtab' %}active{% endif %}">
                     <i class="fas fa-upload"></i>
                     <span>Upload File</span>
                 </a>
 
-                {% if active_tab in ['admin_uploadtab', 'admin_uploadLecturerTimetabletab', 'admin_uploadLecturerListtab', 'admin_uploadExamDetailstab'] %}
-                    <a href="{{ url_for('admin_uploadLecturerTimetable') }}" class="tab-link {% if active_tab == 'admin_uploadLecturerTimetabletab' %}active{% endif %}">
-                        <i class="fas fa-table"></i>
-                        <span>Lecturer Timetable</span>
-                    </a>
-                    <a href="{{ url_for('admin_uploadLecturerList') }}" class="tab-link {% if active_tab == 'admin_uploadLecturerListtab' %}active{% endif %}">
-                        <i class="fas fa-users"></i>
-                        <span>Lecturer List</span>
-                    </a>
-                    <a href="{{ url_for('admin_uploadExamDetails') }}" class="tab-link {% if active_tab == 'admin_uploadExamDetailstab' %}active{% endif %}">
-                        <i class="fas fa-file-alt"></i>
-                        <span>Exam Details</span>
-                    </a>
-                {% endif %}
+                {% if active_tab in ['admin_uploadtab', 'admin_uploadLecturerTimetabletab', 'admin_uploadLecturerListtab', 'admin_uploadExamDetailstab'] %} -->
+                <a href="{{ url_for('admin_uploadLecturerTimetable') }}" class="tab-link {% if active_tab == 'admin_uploadLecturerTimetabletab' %}active{% endif %}">
+                    <i class="fas fa-table"></i>
+                    <span>Upload Lecturer Timetable</span>
+                </a>
+                <a href="{{ url_for('admin_uploadLecturerList') }}" class="tab-link {% if active_tab == 'admin_uploadLecturerListtab' %}active{% endif %}">
+                    <i class="fas fa-users"></i>
+                    <span>Upload Lecturer Lists</span>
+                </a>
+                <a href="{{ url_for('admin_uploadExamDetails') }}" class="tab-link {% if active_tab == 'admin_uploadExamDetailstab' %}active{% endif %}">
+                    <i class="fas fa-file-alt"></i>
+                    <span>Upload Exam Sessions</span>
+                </a>
+                <a href="{{ url_for('admin_uploadExamDetails') }}" class="tab-link {% if active_tab == 'admin_uploadExamDetailstab' %}active{% endif %}">
+                    <i class="fas fa-book"></i>
+                    <span>Upload Course Details</span>
+                </a>
+                <!--{% endif %}-->
 
                 <a href="{{ url_for('admin_autoGenerate') }}" class="tab-link {% if active_tab == 'admin_autoGeneratetab' %}active{% endif %}">
                     <i class="fas fa-calendar-alt"></i>
