--- a/app/static/css/admin/adminHome.css
+++ b/app/static/css/admin/adminHome.css
@@ -34,7 +34,7 @@ body {
 }
 
 .sidebar {
-    width: 250px;
+    width: 15%;
     display: flex;
     flex-direction: column;
     border-right: 1px solid #e0e0e0;
@@ -72,8 +72,7 @@ body {
     color: black;
     padding: 15px;
     text-decoration: none;
-    border-radius: 4px;
-    margin-bottom: 10px;
+    border-radius: 2px;
     display: flex;
     align-items: center;
     white-space: nowrap;
