--- a/app/static/css/admin/adminHome.css
+++ b/app/static/css/admin/adminHome.css
@@ -42,6 +42,9 @@ body {
     transition: width 0.3s ease;
     overflow: hidden;
     flex-shrink: 0;
+    overflow-y: hidden; /* Disable scrolling */
+    height: 100%; /* Full viewport height */
+    position: fixed; /* Fixed position */
 }
 
 .sidebar.collapsed {
