--- a/app/templates/adminPart/adminUploadLecturerTimetable.html
+++ b/app/templates/adminPart/adminUploadLecturerTimetable.html
@@ -25,16 +25,16 @@
         </form>
     </div>  
 
-    <br>
+    <br><br>
     <h2>Table Record</h2>
-    <label>
+    <!--<label>
         To Do: <br>
         1. Allow edit based on the Id <br>
         2. Deactivated will send an email to the upload email address for activation link <br>
         Question: <br>
         1. For the Department, what looks inside Excel, does I need to set if SOE to SOE - School of Engineering <br>
         2. For the Contact, because of the Excel can't start with 0, so does I need to add in 0 
-    </label>
+    </label>-->
 
     <div class="user-table-container">
         <table class="user-data-table">
