--- a/app/templates/adminPart/adminUploadCourseDetails.html
+++ b/app/templates/adminPart/adminUploadCourseDetails.html
@@ -3,8 +3,8 @@
 
 {% block content %}
 <div class="menu-section">
-    <div class="main-frame">
-        <h2>Upload Course Details</h2>
+    <h2>Upload Course Details</h2>
+    <div class="form-frame">
         <form id="uploadExamForm" action="{{ url_for('admin_uploadExamDetails') }}" method="POST" enctype="multipart/form-data">
             <div style="text-align: center; margin-bottom: 2%;">
                 <label>
@@ -23,6 +23,7 @@
         </form>
     </div>
 
+    <br><br>
     <h2>Table Record</h2>
     <label>
         Alert<br>
