--- a/app/templates/adminPart/adminHomepage.html
+++ b/app/templates/adminPart/adminHomepage.html
@@ -6,7 +6,48 @@
         <!-- Row 1 First Fesatures to upload merge schedule files--> 
         <div class="menu-section">
             <!--   <h2>Upload File</h2><br>  -->
-            <a href="{{ url_for('admin_upload')}}" style="text-decoration: none;"><h2>Upload File</h2></a>
+            <a href="{{ url_for('admin_uploadLecturerTimetable')}}" style="text-decoration: none;"><h2>Upload Lecturer Timetable</h2></a>
+            <li class="submenu">
+                <strong>  Purpose:</strong>
+                <ul>    
+                    <li>Upload merged lecturer schedule files</li>
+                    <li>Access and review combined lecturer timetables</li>
+                </ul>
+            </li>
+        </div>
+
+        <!-- Row 2 First auto generated scdehule-->
+        <div class="menu-section">
+            <!-- <h2>Generate Exam Schedule</h2> -->
+            <a href="{{ url_for('admin_uploadLecturerList')}}" style="text-decoration: none;"><h2>Upload Lecturer List</h2></a>
+            <li class="submenu">
+                <strong>  Functionality:</strong>
+                <ul>
+                    <li>Upload merged lecturer schedule files</li>
+                    <li>Access and review combined lecturer timetables</li>
+                </ul>
+            </li>
+        </div>
+
+        <!-- Row 2 Second on managing lecturers-->
+        <div class="menu-section">
+        <!-- <h2>Settings</h2> -->
+            <a href="{{ url_for('admin_uploadExamDetails')}}" style="text-decoration: none;"><h2>Upload Exam Details</h2></a>
+            <li class="submenu">
+                <strong>  Account Controls: </strong>
+                <ul>
+                    <li>Upload merged lecturer schedule files</li>
+                    <li>Access and review combined lecturer timetables</li>
+                </ul>
+            </li>
+        </div>
+    </div>
+
+    <div class="menu-grid" style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 1%; width: 100%;;">
+        <!-- Row 1 First Fesatures to upload merge schedule files--> 
+        <div class="menu-section">
+            <!--   <h2>Upload File</h2><br>  -->
+            <a href="{{ url_for('admin_uploadCourseDetails')}}" style="text-decoration: none;"><h2>Upload Course <Details></Details></h2></a>
             <li class="submenu">
                 <strong>  Purpose:</strong>
                 <ul>    
