--- a/app/templates/adminPart/adminUploadLecturerTimetable.html
+++ b/app/templates/adminPart/adminUploadLecturerTimetable.html
@@ -8,17 +8,16 @@
     <h2>Upload Lecturer Timetable</h2>
     <div class="form-frame">
         <form id="uploadLecturerForm" action="{{ url_for('admin_uploadLecturerTimetable') }}" method="POST" enctype="multipart/form-data">
-            <div style="text-align: center; margin-bottom: 1%;">
-                <label>
-                    Upload file format
-                </label>
-            </div>
-            <div class="input-frame">
-                <input type="file" id="lecturer_list" name="lecturer_file" accept=".xlsx,.xls,.xlsm" required>
-            </div>
-            <div class="button-wrapper">
-                <button type="submit">Upload</button>
-            </div>
+
+            <label for="file-input">
+                <div class="upload-container">
+                    <div class="upload-text">Upload file format<br>Click to upload or drag and drop</div>
+                    <div class="file-types">SVS, PNG, JPG or GIF (max. 800×400px)</div>
+                </div>
+            </label>
+            
+            <input type="file" id="lecturer_list" name="lecturer_file" accept=".xlsx,.xls,.xlsm" required>
+
             <!-- Result feedback -->
             <div id="lecturerUploadResult" style="text-align: center;"></div>
             <div id="lecturerUploadErrors" style="text-align: center; max-height: 15vh; overflow-y: auto;"></div>
